--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Welcome to app</h1>
-<p>sign up <%= link_to "here", "#" %>.</p>
+<div class="jumbotron center">
+	<h1>Welcome to the app.</h1>
+	<p>
+		<%= link_to "login", "#", class: "btn btn-default btn-lg" %> 
+		<%= link_to "sign up here", "#", class: "btn btn-primary btn-lg" %>
+	</p>
+</div>
