--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,13 @@
 <div class="jumbotron center">
 	<h1>Welcome to the app.</h1>
-	<p>
-		<%= link_to "login", "#", class: "btn btn-default btn-lg" %> 
-		<%= link_to "sign up here", "#", class: "btn btn-primary btn-lg" %>
-	</p>
+
+	<% if user_signed_in? %>
+		<p>signed in</p>
+	<% else %>
+		<p>
+			<%= link_to "login", new_user_session_path, class: "btn btn-default btn-lg" %> 
+			<%= link_to "sign up here", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+		</p>
+	<% end %>
+
 </div>
